return the newly created news and news comment.
